    used the wrong case for a user id and then fixed it to still get access denied
    errors. (Bug #31433)    
  - improved the speed of load data local infile significantly    
  - fixed MySqlDateTime.ToString() to properly return the date value (Bug #32010)    
  - fixed problem where string parameters who have their size set after their value could cause exceptions
    (Bug #32094)    
    
Version 5.0.8   8/16/2007

  Bug #28706 Log messages are truncated  
  - Fixed a problem with compression over a network.  We were letting the inflate stream read
    directly from the network stream.  Under certain situations, two bytes were being left unread
    and this messed up our byte counts.  Now we are using a WeakReference to an internal buffer
    that we read the compressed data into before inflating. (Bug #28204)  
  - Fixed problem where we were not closing prepared statement handles
    when commands are disposed.
  - Fixed problem where any attempt to not read all the records returned
    from a select where each row of the select is greater than 1024 bytes
    would hang the driver.
  - Fixed problem where usage advisor warnings for unnecessary field conversions
    and not reading all rows of a resultset would output even if you
    did not request usage advisor warnings. (Bug #29124)
  - Changed behavior of ConnectionString property.  It now only returns the connection
    string given to it.  It will not attempt to track changes to the current
    database when the users uses the ChangeDatabase method. (Bug #29123)
  - Fixed problem with calling stored procedures in databases that have hyphens
    in their names.  We were not using backticks to quote the database and sproc name
    when querying for metadata. (Bug #29526)
  - Fixed problem where a statement that has parameters that is executed without
    defining those parameters would throw a System.FormatException rather than
    a MySqlException (bug #29312)    